[package]
name = "eigen-evulot-e2e-tests"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Eigen Gevulot Test Programs"
documentation = "https://eigen.cash"
homepage = "https://eigen.cash"


[dependencies]
##starky = { package="starky", path = "../../eigen-zkvm/starky", version = "0.0.1" }
starky = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main" }
clap = { package = "clap", version = "4.3.4", features = ["derive"] }
num-traits = "0.2.8"


# error and log
log = "0.4.0"
env_logger = "0.10"
anyhow = { version = "1.0", default-features = false }

####
blake3 = { version = "1.5", features = [ "mmap" ] }
futures-util = { version = "0.3", default-features = false }
gevulot-node = { git = "https://github.com/gevulotnetwork/gevulot" }
hex = "0.4"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
libsecp256k1 = "0.7"
rand = { version = "0.8", features = [ "std_rng" ] }
sha3 = "0.10"
tokio = { version = "1", features = [ "full" ] }
tokio-util = "0.7"
####

[features]
default = []
