[package]
name = "eigen-evulot-e2e-tests"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Eigen Gevulot Test Programs"
documentation = "https://eigen.cash"
homepage = "https://eigen.cash"

[[bin]]
name = "prover"
path = "src/prover.rs"

[[bin]]
name = "verifier"
path = "src/verifier.rs"

[dependencies]
powdr  =  { git = "https://github.com/eigmax/powdr", branch = "feature-starky-avx512", default-features = false }
starky =  { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main" }
recursion =  { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main" }
clap = { package = "clap", version = "4.3.4", features = ["derive"] }
num-traits = "0.2.8"


# error and log
log = "0.4.0"
env_logger = "0.10"
anyhow = { version = "1.0", default-features = false }

####
blake3 = { version = "1.5", features = [ "mmap" ] }
futures-util = { version = "0.3", default-features = false }
gevulot-node = { git = "https://github.com/gevulotnetwork/gevulot" }
gevulot-cli   =  { git = "https://github.com/gevulotnetwork/gevulot" }
gevulot-shim = { git = "https://github.com/gevulotnetwork/gevulot" }
hex = "0.4"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
libsecp256k1 = "0.7"
rand = { version = "0.8", features = [ "std_rng" ] }
sha3 = "0.10"
tokio = { version = "1", features = [ "full" ] }
tokio-util = "0.7"
####


thiserror = "1.0"
serde_json = "1.0.108"


[dev-dependencies]
num-traits = "0.2.17"

[features]
default = []
avx512 = ["starky/avx512", "recursion/avx512", "powdr/starky-avx512"]
