[package]
name = "eigen-gevulot-e2e-tests"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Eigen Gevulot Test Programs"
documentation = "https://eigen.cash"
homepage = "https://eigen.cash"

[[bin]]
name = "gevulot-prover"
path = "src/prover.rs"

[[bin]]
name = "gevulot-verifier"
path = "src/verifier.rs"

[dependencies]
gevulot-node = { git = "https://github.com/gevulotnetwork/gevulot" }
gevulot-cli   =  { git = "https://github.com/gevulotnetwork/gevulot" }
gevulot-shim = { git = "https://github.com/gevulotnetwork/gevulot" }
libsecp256k1 = "0.7"
blake3 = { version = "1.5", features = [ "mmap" ] }

###
starky = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main", default-features = false }
recursion = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main", default-features = false }
plonky = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main", default-features = false }
#groth16 = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main", default-features = false  }
algebraic = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main"  }
dsl_compile = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main" }
zkvm = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main", default-features = false }

##powdr = { git = "https://github.com/0xEigenLabs/powdr", branch = "binary-mux2", default-features = false }
##powdr =   { git = "https://github.com/eigmax/powdr", branch = "feature-starky-avx512", default-features = false }
powdr = { path = "../../../powdr/powdr" , branch = "binary-mux2", default-features = false }

tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
uuid = { version = "1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4.0"
clap = { package = "clap", version = "4.3.4", features = ["derive"] }

env_logger = "0.10"

[features]
default = []
##avx512 = ["starky/avx512", "recursion/avx512", "powdr/starky-avx512"]
avx512 = ["starky/avx512", "recursion/avx512"]